# visual-search-experiment

./: .gitignore  README.md  pyproject.toml
experiments/: 1. model_dataset_exploration.ipynb  2. create_image_encoder.ipynb  3. create_vector_database.ipynb  4. evaluate_model_performance.ipynb
src/: evaluation.py  image_encoder.py  image_metadata_process.py  image_process.py  image_vector_db.py  qdrant_vector_db.py  utils.py
